Little work on style guide html

--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
 
 
+body	{
+	background-color: pink;
+}
+
+#container		{
+	padding: 100px;
+	vertical-align;
+	background-color: #A5ACAF;
+}
+
+h4		{
+}
+
+h2		{
+}
+
+#data	{
+	font-color: #002244;
+}
+
+#text	{
+	font-color: #69BE28
+}
+
+
+dark blue #002244
+lime green #69BE28
+Grey #A5ACAF
+
 
